@@ -1,9 +1,6 @@
 /*
  * Copyright 2021, OpenRemote Inc.
  *
- * See the CONTRIBUTORS.txt file in the distribution for a
- * full listing of individual contributors.
- *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU Affero General Public License as
  * published by the Free Software Foundation, either version 3 of the
@@ -16,9 +13,15 @@
  *
  * You should have received a copy of the GNU Affero General Public License
  * along with this program. If not, see <http://www.gnu.org/licenses/>.
+ *
+ * SPDX-License-Identifier: AGPL-3.0-or-later
  */
 package org.openremote.model.util;
 
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.Map;
+import java.util.Optional;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.node.ArrayNode;
@@ -28,21 +31,22 @@ import com.kjetland.jackson.jsonSchema.JsonSchemaConfig;
 import com.kjetland.jackson.jsonSchema.JsonSchemaDraft;
 import com.kjetland.jackson.jsonSchema.annotations.JsonSchemaInject;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.Map;
-import java.util.Optional;
-
 public class JSONSchemaUtil {
 
     @JsonSchemaInject(jsonSupplierViaLookup = JSONSchemaUtil.SCHEMA_SUPPLIER_NAME_PATTERN_PROPERTIES_ANY_KEY_ANY_TYPE)
-    static class PatternPropertiesAnyKeyAnyType {}
-    @JsonSchemaInject(jsonSupplierViaLookup = JSONSchemaUtil.SCHEMA_SUPPLIER_NAME_PATTERN_PROPERTIES_SIMPLE_KEY_ANY_TYPE)
-    static class PatternPropertiesSimpleKeyAnyType {}
-    @JsonSchemaInject(jsonSupplierViaLookup = JSONSchemaUtil.SCHEMA_SUPPLIER_NAME_ANY_TYPE)
-    static class AnyType {}
+    static class PatternPropertiesAnyKeyAnyType {
+    }
 
-    private JSONSchemaUtil() {}
+    @JsonSchemaInject(jsonSupplierViaLookup = JSONSchemaUtil.SCHEMA_SUPPLIER_NAME_PATTERN_PROPERTIES_SIMPLE_KEY_ANY_TYPE)
+    static class PatternPropertiesSimpleKeyAnyType {
+    }
+
+    @JsonSchemaInject(jsonSupplierViaLookup = JSONSchemaUtil.SCHEMA_SUPPLIER_NAME_ANY_TYPE)
+    static class AnyType {
+    }
+
+    private JSONSchemaUtil() {
+    }
 
     public static final String SCHEMA_SUPPLIER_NAME_ANY_TYPE = "anyType";
     public static final String SCHEMA_SUPPLIER_NAME_PATTERN_PROPERTIES_ANY_KEY_ANY_TYPE = "patternPropertiesAnyKeyAnyType";
@@ -56,15 +60,8 @@ public class JSONSchemaUtil {
     public static final String TYPE_STRING = "string";
     public static final String TYPE_ARRAY = "array";
     public static final String TYPE_OBJECT = "object";
-    public static final String[] TYPES_ALL = new String[]{
-        TYPE_NULL,
-        TYPE_NUMBER,
-        TYPE_INTEGER,
-        TYPE_BOOLEAN,
-        TYPE_STRING,
-        TYPE_ARRAY,
-        TYPE_OBJECT
-    };
+    public static final String[] TYPES_ALL = new String[] { TYPE_NULL, TYPE_NUMBER, TYPE_INTEGER, TYPE_BOOLEAN,
+            TYPE_STRING, TYPE_ARRAY, TYPE_OBJECT };
 
     public static JsonNode getSchemaPatternPropertiesAnyKeyAnyType() {
         return getSchemaPatternProperties(PATTERN_PROPERTIES_MATCH_ANY, TYPES_ALL);
@@ -78,7 +75,7 @@ public class JSONSchemaUtil {
         return getSchemaPatternProperties(keyPattern, TYPES_ALL);
     }
 
-    public static JsonNode getSchemaPatternProperties(String keyPattern, String...types) {
+    public static JsonNode getSchemaPatternProperties(String keyPattern, String... types) {
         ObjectNode node = ValueUtil.JSON.createObjectNode();
         node.put("type", "object");
         ObjectNode patternNode = node.putObject("patternProperties").putObject(keyPattern);
@@ -86,7 +83,7 @@ public class JSONSchemaUtil {
         return node;
     }
 
-    public static JsonNode getSchemaType(boolean wrapped, String...types) {
+    public static JsonNode getSchemaType(boolean wrapped, String... types) {
         JsonNode typesNode;
 
         if (types.length == 1) {
@@ -101,33 +98,14 @@ public class JSONSchemaUtil {
     }
 
     public static JsonSchemaConfig getJsonSchemaConfig() {
-        return JsonSchemaConfig.create(
-            false,
-            Optional.empty(),
-            false,
-            false,
-            false,
-            false,
-            false,
-            false,
-            false,
-            Collections.emptyMap(),
-            false,
-            Collections.emptySet(),
-            Map.of(
-                Object.class, AnyType.class,
-                ObjectNode.class, PatternPropertiesSimpleKeyAnyType.class
-            ),
-            Map.of(
-                SCHEMA_SUPPLIER_NAME_ANY_TYPE, () -> getSchemaType(true, TYPES_ALL),
-                SCHEMA_SUPPLIER_NAME_PATTERN_PROPERTIES_ANY_KEY_ANY_TYPE, JSONSchemaUtil::getSchemaPatternPropertiesAnyKeyAnyType,
-                SCHEMA_SUPPLIER_NAME_PATTERN_PROPERTIES_SIMPLE_KEY_ANY_TYPE, JSONSchemaUtil::getSchemaPatternPropertiesSimpleKeyAnyType
-            ),
-            null,
-            false,
-            null,
-            null,
-            true
-        ).withJsonSchemaDraft(JsonSchemaDraft.DRAFT_07);
+        return JsonSchemaConfig.create(false, Optional.empty(), false, false, false, false, false, false, false,
+                Collections.emptyMap(), false, Collections.emptySet(),
+                Map.of(Object.class, AnyType.class, ObjectNode.class, PatternPropertiesSimpleKeyAnyType.class),
+                Map.of(SCHEMA_SUPPLIER_NAME_ANY_TYPE, () -> getSchemaType(true, TYPES_ALL),
+                        SCHEMA_SUPPLIER_NAME_PATTERN_PROPERTIES_ANY_KEY_ANY_TYPE,
+                        JSONSchemaUtil::getSchemaPatternPropertiesAnyKeyAnyType,
+                        SCHEMA_SUPPLIER_NAME_PATTERN_PROPERTIES_SIMPLE_KEY_ANY_TYPE,
+                        JSONSchemaUtil::getSchemaPatternPropertiesSimpleKeyAnyType),
+                null, false, null, null, true).withJsonSchemaDraft(JsonSchemaDraft.DRAFT_07);
     }
 }
